fix invisible space taken by main-nav element

--- a/css/queries.css
+++ b/css/queries.css
@@ -9,6 +9,7 @@
   .hero {
     padding-top: 1rem;
     padding-bottom: 1rem;
+    max-width: 100vw;
   }
 
   .logo {
@@ -32,6 +33,7 @@
   }
 
   .main-nav {
+    display: none;
     position: absolute;
     top: 0;
     left: 0;
@@ -39,18 +41,10 @@
     height: 100vh;
     background-color: #232340;
     font-size: 3.2rem;
-    opacity: 0;
-    pointer-events: none;
-    visibility: hidden;
-    transform: translateX(100%);
-    translate: all 10s ease-in;
   }
 
   .nav-open .main-nav {
-    opacity: 1;
-    pointer-events: auto;
-    visibility: visible;
-    transform: translateX(0);
+    display: block;
   }
 
   .toggle-icon[name="menu-outline"] {
